--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="Styles/portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="portfolio-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -19,6 +19,16 @@
                 <li><button class="btn-primary">Hire me</button></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div>
+               <h3 class="banner-ruff">Hi, I am</h3>
+               <h3 class="banner-ill">Mary Hardy</h3>
+               <p>I am a dedicated person who is always looking for new challenges. I have a strong ethic and am very motivated towards what I do. I enjoy working with others and am always happy to help. I am a fast learner and always want to learn new things.</p>
+               <button class="btn-primary">Download CV</button>
+               <button class="btn-primary">Contact</button>
+            </div>  
+            <img class="profilepic"  src="images/for portfolio.jpg" alt=""> 
+        </div>
           
     </header>
     <main>
