added more information

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             </ul>
         </nav>
         <div class="banner">
-            <div>
+            <div class="banner-content">
                <h3 class="banner-ruff">Hi, I am</h3>
                <h3 class="banner-ill">Mary Hardy</h3>
-               <p>I am a dedicated person who is always looking for new challenges. I have a strong ethic and am very motivated towards what I do. I enjoy working with others and am always happy to help. I am a fast learner and always want to learn new things.</p>
+               <p class="banner-des">I am a dedicated person who is always looking for new challenges. I have a strong ethic and am very motivated towards what I do. I enjoy working with others and am always happy to help. I am a fast learner and always want to learn new things.</p>
                <button class="btn-primary">Download CV</button>
                <button class="btn-primary">Contact</button>
             </div>  
@@ -32,6 +32,34 @@
           
     </header>
     <main>
+        <section class="about">
+            <h3 class="section-title">About Me
+                <p class="section-des">
+                    A designer is a person who plans the form or structure of something before it is made, by preparing drawings or plans. In practice, anyone who creates tangible or intangible objects, products, processes, laws, games, graphics, services, or experiences can be referred to as a designer.
+                </p>
+                <!-- .about-info-container -->
+                <div class="about-info-container">
+                    <!-- .about-info*4>h4.info-title+p.info-des -->
+                    <div class="about-info">
+                        <h4 class="info-title">Name:</h4>
+                        <p class="info-des">Mary Hardy</p>
+                    </div>
+                    <div class="about-info">
+                        <h4 class="info-title">Email:</h4>
+                        <p class="info-des">info@gmail.com</p>
+                    </div>
+                    <div class="about-info">
+                        <h4 class="info-title">Date of birth:</h4>
+                        <p class="info-des">14 November 1998</p>
+                    </div>
+                    <div class="about-info">
+                        <h4 class="info-title">From:</h4>
+                        <p class="info-des">Dhaka,Bangladesh</p>
+                    </div>
+
+                </div>
+            </h3>
+        </section>
 
     </main>
     <footer>
