added more styles

--- a/index.html
+++ b/index.html
@@ -60,6 +60,35 @@
                 </div>
             </h3>
         </section>
+        <section class="section-title">What I do
+            <p id="what" class="section-des">
+                Experience is knowledge or skill in a particular job or activity, which you have gained from doing that job or activity. She has experience of working with children.A life experience is an experience that changes an individual. This is associated with hardships, problems, risk taking, effort and originality whereby individuals stretch themselves to improve their character, talents and knowledge.
+            </p>
+            <div class="skills-container">
+                <!-- .skills*4>img+h3.skill-title+p.skill-des -->
+                <div class="skills">
+                    <img src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png" alt="">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-des">This logo image consists only of simple geometric shapes or text. It does not meet the threshold of originality needed for copyright protection, and is therefore in the public domain. Although it is free of copyright restrictions, this image may still be subject to other restrictions.</p>
+                </div>
+                <div class="skills">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/2300px-React-icon.svg.png" alt="">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-des">React Icons is a library that provides popular icons for your React applications. You can select from 10 popular icon sets: Font Awesome, Ionicons, Material Design icons, Typicons, Github Octicons icons, Feather, Game Icons, Weather Icons, Devicons, and Ant Design Icons.</p>
+                </div>
+                <div class="skills">
+                    <img src="https://w7.pngwing.com/pngs/558/166/png-transparent-node-js-javascript-react-express-js-linux-foundation-mongodb-icons-angle-text-rectangle.png" alt="">
+                    <h3 class="skill-title">Node.js</h3>
+                    <p class="skill-des">The usual way to run a Node.js program is to run the globally available node command (once you install Node.js) and pass the name of the file you want to execute. While running the command, make sure you are in the same directory which contains the app.js file.</p>
+                </div>
+                <div class="skills">
+                    <img src="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco,dpr_1/erkxwhl1gd48xfhe2yld" alt="">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-des">MongoDB is a tool that can manage document-oriented information, store or retrieve information. MongoDB is used for high-volume data storage, helping organizations store large amounts of data while still performing rapidly.</p>
+                </div>
+            </div>
+        </section>
+
 
     </main>
     <footer>
