--- a/index.html
+++ b/index.html
@@ -166,6 +166,12 @@
         </div>
         <div class="footer-column">
             <h3 class="section-title">Let's Message me</h3>
+            <form class="contact">
+                <input type="text" placeholder="Your name" name="" id="">
+                <input type="email" placeholder="Your Email" name="" id="">
+                <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
 
         </div>
 
